--- a/index2.html
+++ b/index2.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="utf-8">
-<title>Sample</title>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script>
-$(function(){
-  //フォーカスアウトイベント
-  $('#txt1').focusout(function(){
-    console.log('フォーカスアウトイベントが発生しました。');
-  });
-});
-</script>
+  <meta charset="UTF-8">
+  <title>clickMe!</title>
 </head>
 <body>
-  <input type="text" id="txt1" >
+  <div class="outer">
+    <div class="inner">
+      clickMe!
+    </div>
+  </div>
 </body>
 </html>
